--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/8.6 Permalist Project/public/styles/main.css" />
+  <link rel="stylesheet" href="/public/styles/main.css" />
   <title>Todolist</title>
 </head>
 
