--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs'); -%>
+<%- include('/partials/header.ejs'); -%>
 
   <div class="box" id="heading">
     <h1>
@@ -42,4 +42,4 @@
       document.getElementById("input" + id).removeAttribute("hidden")
     }
   </script>
-  <%- include('partials/footer.ejs'); -%>
+  <%- include('/partials/footer.ejs'); -%>
